--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,57 @@
 <app-navbar></app-navbar>
+<header class="p-1">
+  <!-- Carousel video -->
+  <div
+    id="carouselExampleControls"
+    class="carousel slide w-50 mx-auto"
+    data-ride="carousel"
+  >
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="embed-responsive embed-responsive-21by9">
+          <iframe
+            class="embed-responsive-item"
+            src="https://www.youtube.com/embed/iKUzhzustok"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="embed-responsive embed-responsive-21by9">
+          <iframe
+            class="embed-responsive-item"
+            src="https://www.youtube.com/embed/YoHD9XEInc0"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="embed-responsive embed-responsive-21by9">
+          <iframe
+            class="embed-responsive-item"
+            src="https://www.youtube.com/embed/6rbPTQIdjmY"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+    <a
+      class="carousel-control-prev"
+      href="#carouselExampleControls"
+      role="button"
+      data-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a
+      class="carousel-control-next"
+      href="#carouselExampleControls"
+      role="button"
+      data-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</header>
