implementation de cinema service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-navbar></app-navbar>
 <header class="p-1">
-  <!-- Carousel video -->
   <div
     id="carouselExampleControls"
     class="carousel slide w-50 mx-auto"
@@ -55,3 +54,4 @@
     </a>
   </div>
 </header>
+<app-cinema></app-cinema>
