--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<header class="p-1">
+<!--<header class="p-1">
   <div
     id="carouselExampleControls"
     class="carousel slide w-50 mx-auto"
@@ -53,5 +53,5 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-</header>
-<app-cinema></app-cinema>
+</header>-->
+<app-list-film-screening></app-list-film-screening>
