--- a/src/app/component/listFilmScreening/list-film-screening/list-film-screening.component.html
+++ b/src/app/component/listFilmScreening/list-film-screening/list-film-screening.component.html
@@ -9,7 +9,12 @@
         <div class="card-body">
           <h5 class="card-title">{{ item.projections[0].movie.title }}</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <ul class="list-group">
+            <li class="list-group-item">Séance</li>
+            <li *ngFor="let p of item.projections" class="list-group-item">
+              {{p.sessionMovie.startTime}} => : {{p.price}}$
+            </li>
+          </ul>
         </div>
       </div>
 
