ajout du router entre list film screening et film screening et ajout du service getRoomById pour le component film screening, plus quelque corection html et css

--- a/src/app/component/list-film-screening/list-film-screening.component.scss
+++ b/src/app/component/list-film-screening/list-film-screening.component.scss
@@ -1,3 +1,12 @@
+/* Carousel */
+header {
+  background-color: #064460;
+  border-bottom: 2px solid #ff4f2e;
+}
+.carousel-item{
+border: 2px solid #ff4f2e;
+}
+
 * {
   -webkit-transition: 300ms;
   transition: 300ms;
