--- a/src/app/component/film-screening/film-screening.component.html
+++ b/src/app/component/film-screening/film-screening.component.html
@@ -1,1 +1,38 @@
-<p>film-screening works!</p>
+<div class="filmScreening">
+  <div class="imgHeader">
+    <img
+      src="http://localhost:8080/movies/banner/1"
+      class="img-fluid"
+      alt="Responsive image"
+    />
+  </div>
+  <div class="container p-5">
+    <div class="row">
+      <div class="col-lg-4">
+        <a href="https://www.youtube.com/watch?v=fP2w_UAK6B4"
+          ><img
+            src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/hobbit_cover.jpg"
+            alt="cover"
+            class="cover"
+        /></a>
+      </div>
+      <div class="col-lg-8">
+        <h1 class="text-center">Titre</h1>
+        <p class="mt-5">
+          Le Lorem Ipsum est simplement du faux texte employé dans la
+          composition et la mise en page avant impression. Le Lorem Ipsum est le
+          faux texte standard de l'imprimerie depuis les années 1500, quand un
+          imprimeur anonyme assembla ensemble des morceaux de texte pour
+          réaliser un livre spécimen de polices de texte. Il n'a pas fait que
+          survivre cinq siècles, mais s'est aussi adapté à la bureautique
+          informatique, sans que son contenu n'en soit modifié. Il a été
+          popularisé dans les années 1960 grâce à la vente de feuilles Letraset
+          contenant des passages du Lorem Ipsum, et, plus récemment, par son
+          inclusion dans des applications de mise en page de texte, comme Aldus
+          PageMaker.
+        </p>
+      </div>
+    </div>
+    <hr>
+  </div>
+</div>
