--- a/src/app/component/list-film-screening/list-film-screening.component.html
+++ b/src/app/component/list-film-screening/list-film-screening.component.html
@@ -1,9 +1,64 @@
+<header>
+  <div
+    id="carouselExampleControls"
+    class="carousel slide w-50 mx-auto"
+    data-ride="carousel"
+  >
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="embed-responsive embed-responsive-21by9">
+          <iframe
+            class="embed-responsive-item"
+            src="https://www.youtube.com/embed/iKUzhzustok"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="embed-responsive embed-responsive-21by9">
+          <iframe
+            class="embed-responsive-item"
+            src="https://www.youtube.com/embed/YoHD9XEInc0"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="embed-responsive embed-responsive-21by9">
+          <iframe
+            class="embed-responsive-item"
+            src="https://www.youtube.com/embed/6rbPTQIdjmY"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+    <a
+      class="carousel-control-prev"
+      href="#carouselExampleControls"
+      role="button"
+      data-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a
+      class="carousel-control-next"
+      href="#carouselExampleControls"
+      role="button"
+      data-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</header>
 <div class="container mt-4">
   <h2>Les Projections</h2>
   <hr />
   <div class="row" *ngIf="rooms">
     <div class="col-lg-4 mb-4" *ngFor="let item of rooms">
-      <div class="movie-card">
+      <div class="movie-card" [routerLink]="['/rooms', item.id]">
         <div class="movie-header manOfSteel">
           <img
             class="card-img-top"
