--- a/src/app/component/list-film-screening/list-film-screening.component.scss
+++ b/src/app/component/list-film-screening/list-film-screening.component.scss
@@ -20,6 +20,7 @@ border: 2px solid #ff4f2e;
   margin: 2em;
   border-radius: 10px;
   display: inline-block;
+  cursor: pointer;
 }
 a {
   text-decoration: none;
@@ -55,14 +56,7 @@ a {
   border-bottom: solid 3px #ff4f2e;
   object-fit: cover;
 }
-.movie-card .header-icon:hover {
-  background: rgba(0, 0, 0, 0.15);
-  font-size: 74px;
-  text-shadow: 0px 0px 20px #6abcea, 0px 5px 30px #6abcea;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  opacity: 1;
-}
+
 .movie-card:hover {
   -webkit-transform: scale(1.03);
   transform: scale(1.03);
