--- a/src/app/component/film-screening/film-screening.component.html
+++ b/src/app/component/film-screening/film-screening.component.html
@@ -41,6 +41,7 @@
     <nav>
       <div class="nav nav-tabs" id="nav-tab" role="tablist">
         <a
+          (click)="onGetAllTickets(item.id)"
           *ngFor="let item of room.projections"
           class="nav-item nav-link"
           id="{{ item.sessionMovie.startTime }}"
@@ -49,7 +50,7 @@
           role="tab"
           aria-controls="nav-contact"
           aria-selected="false"
-          >{{ item.sessionMovie.startTime }} => Prix : {{room.projections[0].price}}$</a
+          >{{ item.sessionMovie.startTime }} => Prix : {{ item.price }}$</a
         >
       </div>
     </nav>
@@ -61,16 +62,12 @@
         role="tabpanel"
         aria-labelledby="nav-contact-tab"
       >
-        {{item.sessionMovie.id}}Le Lorem Ipsum est simplement du faux texte employé dans la
-        composition et la mise en page avant impression. Le Lorem Ipsum est le
-        faux texte standard de l'imprimerie depuis les années 1500, quand un
-        imprimeur anonyme assembla ensemble des morceaux de texte pour réaliser
-        un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq
-        siècles, mais s'est aussi adapté à la bureautique informatique, sans que
-        son contenu n'en soit modifié. Il a été popularisé dans les années 1960
-        grâce à la vente de feuilles Letraset contenant des passages du Lorem
-        Ipsum, et, plus récemment, par son inclusion dans des applications de
-        mise en page de texte, comme Aldus PageMaker.
+        [{{ item.sessionMovie.id }}]
+        <div class="row">
+          <!--<button *ngFor="let ticket of tickets" class="btn btn-primary">
+          </button>-->
+          <img *ngFor="let ticket of tickets" src="assets/img/seat.png" alt="" width="5%" class="btn btn-success m-1"/>
+        </div>
       </div>
     </div>
   </div>
