--- a/src/app/component/film-screening/film-screening.component.scss
+++ b/src/app/component/film-screening/film-screening.component.scss
@@ -38,6 +38,6 @@
   box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.08);
 }
 
-.btn {
-  background-color: white;
+.col-lg-6{
+  text-align: center !important;
 }
