ajout de style pour le trailer

--- a/src/app/component/film-screening/film-screening.component.html
+++ b/src/app/component/film-screening/film-screening.component.html
@@ -11,7 +11,9 @@
       <div class="col-lg-4">
         <div class="imgLeft">
           <a href="https://www.youtube.com/watch?v=fP2w_UAK6B4"
-            ><img
+            >
+            <i class="far fa-4x fa-play-circle"></i>
+            <img
               src="{{ hostPicture + room.projections[0].movie.id }}"
               alt="cover"
             />
@@ -19,12 +21,13 @@
         </div>
       </div>
       <div class="col-lg-8">
-        <h1 class="text-center mb-5">{{ room.projections[0].movie.title }}</h1>
+        <h1 class="text-center">{{ room.projections[0].movie.title }}</h1>
+        <hr class="myTitle" />
         <p>
-          Le Lorem Ipsum est simplement du faux texte employé dans la
-          composition et la mise en page avant impression. Le Lorem Ipsum est le
-          faux texte standard de l'imprimerie depuis les années 1500, quand un
-          imprimeur anonyme assembla ensemble des morceaux de texte pour
+          Description : Le Lorem Ipsum est simplement du faux texte employé dans
+          la composition et la mise en page avant impression. Le Lorem Ipsum est
+          le faux texte standard de l'imprimerie depuis les années 1500, quand
+          un imprimeur anonyme assembla ensemble des morceaux de texte pour
           réaliser un livre spécimen de polices de texte. Il n'a pas fait que
           survivre cinq siècles, mais s'est aussi adapté à la bureautique
           informatique, sans que son contenu n'en soit modifié. Il a été
