Ajout d'un formulair dans une modal pour payer les tickets selectionner

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,6 @@
 @import "~bootstrap/scss/bootstrap";
 /*$fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";*/
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
