--- a/src/app/component/film-screening/film-screening.component.html
+++ b/src/app/component/film-screening/film-screening.component.html
@@ -10,8 +10,7 @@
     <div class="row mb-5">
       <div class="col-lg-4">
         <div class="imgLeft">
-          <a href="https://www.youtube.com/watch?v=fP2w_UAK6B4"
-            >
+          <a href="https://www.youtube.com/watch?v=fP2w_UAK6B4">
             <i class="far fa-4x fa-play-circle"></i>
             <img
               src="{{ hostPicture + room.projections[0].movie.id }}"
@@ -38,6 +37,7 @@
         </p>
         <p>Réalisateur : Guy Ritchie</p>
         <p>Date de sortie : Date de sortie : 10 mai 2017</p>
+        <p>Durée: 97 minutes</p>
       </div>
     </div>
     <hr />
@@ -73,6 +73,7 @@
         <h4 class="text-center my-4">
           {{ item.price }}€ <i class="fas fa-money-bill-wave"></i>
         </h4>
+        <!-- Seats -->
         <div class="row p-4">
           <div class="col-lg-6">
             <span *ngFor="let ticket of tickets"
@@ -97,6 +98,63 @@
             ></span>
           </div>
         </div>
+        <!-- Modal -->
+        <div class="d-flex justify-content-center">
+          <button
+            class="btn btn-lg my-4 btnPaye"
+            *ngIf="selectedTickets.length > 0"
+            (click)="open(content)"
+          >
+            Total : {{ totalPrice }}€ <i class="fas fa-money-bill-wave"></i>
+          </button>
+        </div>
+        <ng-template #content let-modal>
+          <div class="modal-header">
+            <h4 class="modal-title" id="modal-basic-title">
+              Paye your tickets
+            </h4>
+            <button
+              type="button"
+              class="close"
+              aria-label="Close"
+              (click)="modal.dismiss('Cross click')"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form [formGroup]="payeForm" (ngSubmit)="onPayTickets()">
+              <div class="form-group">
+                <label for="nameClient">Nom Client</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="nameClient"
+                  aria-describedby="nameClient"
+                  placeholder="Nom Client"
+                  formControlName="nameClient"
+                />
+              </div>
+              <div class="form-group">
+                <label for="codePayement:">Code Payement:</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="codePayement"
+                  placeholder="Code Payement"
+                  formControlName="codePayement"
+                />
+              </div>
+              <button
+                type="submit"
+                (click)="modal.close('Save click')"
+                class="btn btn-primary"
+              >
+                Payer
+              </button>
+            </form>
+          </div>
+        </ng-template>
       </div>
     </div>
   </div>
