--- a/src/app/component/film-screening/film-screening.component.scss
+++ b/src/app/component/film-screening/film-screening.component.scss
@@ -47,7 +47,7 @@
   }
 }
 
-.imgLeft:hover{
+.imgLeft:hover {
   -webkit-transform: scale(1.03);
   transform: scale(1.03);
   box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.08);
@@ -80,4 +80,14 @@
 
 .fa-money-bill-wave {
   color: green;
+}
+
+.btnPaye {
+  color: #ff4f2e;
+  border-color: #ff4f2e;
+}
+.btnPaye:hover {
+  color: white;
+  border-color: #ff4f2e !important;
+  background-color: #064460;
 }
