Ajout de service pour payer les tickets

--- a/src/app/component/film-screening/film-screening.component.html
+++ b/src/app/component/film-screening/film-screening.component.html
@@ -136,13 +136,13 @@
                 />
               </div>
               <div class="form-group">
-                <label for="codePayement:">Code Payement:</label>
+                <label for="paymentCode:">Code Payement:</label>
                 <input
                   type="text"
                   class="form-control"
-                  id="codePayement"
+                  id="paymentCode"
                   placeholder="Code Payement"
-                  formControlName="codePayement"
+                  formControlName="paymentCode"
                 />
               </div>
               <button
