Ajout du redirect sur le button

--- a/src/app/component/film-screening/film-screening.component.html
+++ b/src/app/component/film-screening/film-screening.component.html
@@ -146,6 +146,7 @@
                 />
               </div>
               <button
+                routerLink=""
                 type="submit"
                 (click)="modal.close('Save click')"
                 class="btn btn-primary"
