--- a/src/app/component/film-screening/film-screening.component.html
+++ b/src/app/component/film-screening/film-screening.component.html
@@ -10,7 +10,7 @@
     <div class="row mb-5">
       <div class="col-lg-4">
         <div class="imgLeft">
-          <a href="https://www.youtube.com/watch?v=fP2w_UAK6B4">
+          <a href="{{ room.projections[0].movie.trailer }}">
             <i class="far fa-4x fa-play-circle"></i>
             <img
               src="{{ hostPicture + room.projections[0].movie.id }}"
@@ -23,21 +23,11 @@
         <h1 class="text-center">{{ room.projections[0].movie.title }}</h1>
         <hr class="myTitle" />
         <p>
-          Description : Le Lorem Ipsum est simplement du faux texte employé dans
-          la composition et la mise en page avant impression. Le Lorem Ipsum est
-          le faux texte standard de l'imprimerie depuis les années 1500, quand
-          un imprimeur anonyme assembla ensemble des morceaux de texte pour
-          réaliser un livre spécimen de polices de texte. Il n'a pas fait que
-          survivre cinq siècles, mais s'est aussi adapté à la bureautique
-          informatique, sans que son contenu n'en soit modifié. Il a été
-          popularisé dans les années 1960 grâce à la vente de feuilles Letraset
-          contenant des passages du Lorem Ipsum, et, plus récemment, par son
-          inclusion dans des applications de mise en page de texte, comme Aldus
-          PageMaker
+          {{ room.projections[0].movie.description }}
         </p>
-        <p>Réalisateur : Guy Ritchie</p>
-        <p>Date de sortie : Date de sortie : 10 mai 2017</p>
-        <p>Durée: 97 minutes</p>
+        <p>Réalisateur : {{ room.projections[0].movie.filmDirector }}</p>
+        <p>Date de sortie : {{ room.projections[0].movie.releaseDate }}</p>
+        <p>Durée: {{ room.projections[0].movie.duration }}</p>
       </div>
     </div>
     <hr />
