--- a/src/app/component/admin-movies/admin-movies.component.html
+++ b/src/app/component/admin-movies/admin-movies.component.html
@@ -24,6 +24,26 @@
         ></textarea>
       </div>
       <div class="form-group">
+        <h6>catégories</h6>
+        <hr />
+        <div
+          class="form-check form-check-inline"
+          *ngFor="let item of categories"
+        >
+          <input
+            class="form-check-input"
+            type="radio"
+            name="category"
+            id="inlineRadio1"
+            value="{{ item.id }}"
+            formControlName="category"
+          />
+          <label class="form-check-label" for="inlineRadio1">{{
+            item.name
+          }}</label>
+        </div>
+      </div>
+      <div class="form-group">
         <label for="filmDirector:">Réalisateur </label>
         <input
           type="text"
@@ -76,7 +96,6 @@
       <div class="form-group">
         <label for="banner">bannière</label>
         <input
-          routerLink=""
           type="file"
           class="form-control"
           id="banner"
@@ -84,7 +103,9 @@
           (change)="onFileChangeBanner($event)"
         />
       </div>
-      <button type="submit" class="btn btn-primary">Ajouter</button>
+      <button type="submit" class="btn btn-primary">
+        Ajouter
+      </button>
     </form>
   </div>
 </div>
