--- a/src/app/component/film-screening/film-screening.component.html
+++ b/src/app/component/film-screening/film-screening.component.html
@@ -28,6 +28,7 @@
         <p>Réalisateur : {{ room.projections[0].movie.filmDirector }}</p>
         <p>Date de sortie : {{ room.projections[0].movie.releaseDate }}</p>
         <p>Durée: {{ room.projections[0].movie.duration }}</p>
+        <p>Catégorie : {{ room.projections[0].movie.category.name }}</p>
       </div>
     </div>
     <hr />
