--- a/src/app/component/film-screening/film-screening.component.html
+++ b/src/app/component/film-screening/film-screening.component.html
@@ -93,7 +93,7 @@
         <div class="d-flex justify-content-center">
           <button
             class="btn btn-lg my-4 btnPaye"
-            *ngIf="selectedTickets.length > 0"
+            *ngIf="selectedTickets.length > 0 && this.loginService.isAuth()"
             (click)="open(content)"
           >
             Total : {{ totalPrice }}€ <i class="fas fa-money-bill-wave"></i>
@@ -116,24 +116,21 @@
           <div class="modal-body">
             <form [formGroup]="payeForm" (ngSubmit)="onPayTickets()">
               <div class="form-group">
-                <label for="nameClient">Nom Client</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="nameClient"
-                  aria-describedby="nameClient"
-                  placeholder="Nom Client"
-                  formControlName="nameClient"
-                />
-              </div>
-              <div class="form-group">
-                <label for="paymentCode:">Code Payement:</label>
+                <label for="paymentCode:">Numéro de carte :</label>
                 <input
                   type="text"
                   class="form-control"
                   id="paymentCode"
-                  placeholder="Code Payement"
+                  placeholder="Numéro de carte"
                   formControlName="paymentCode"
+                />
+              </div>
+              <div class="form-group">
+                <label for="paymentCode:">Code de sécurité</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="cvv"
                 />
               </div>
               <button
