--- a/src/app/navbar/navbar/navbar.component.html
+++ b/src/app/navbar/navbar/navbar.component.html
@@ -32,7 +32,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" [routerLink]="['/admin/movies']">Movies</a>
-          <a class="dropdown-item">Tickets</a>
+          <a class="dropdown-item" [routerLink]="['/admin/tickets']">Tickets</a>
         </div>
       </li>
       <!-- Dropdown -->
