--- a/src/app/component/list-film-screening/list-film-screening.component.html
+++ b/src/app/component/list-film-screening/list-film-screening.component.html
@@ -86,8 +86,8 @@
             <div class="info-section">
               <label>duration</label>
               <span>{{
-                item.projections[0].movie.duration | date: "hh:mm:ss"
-              }}</span>
+                item.projections[0].movie.duration
+              }} minutes </span>
             </div>
           </div>
         </div>
