--- a/src/app/component/list-film-screening/list-film-screening.component.scss
+++ b/src/app/component/list-film-screening/list-film-screening.component.scss
@@ -2,6 +2,7 @@
 header {
   background-color: #064460;
   border-bottom: 2px solid #ff4f2e;
+  border-top: 2px solid #ff4f2e;
 }
 .carousel-item{
 border: 2px solid #ff4f2e;
