ajout de la page list movies qui affiche tout les films present

--- a/src/app/component/admin-tickets/admin-tickets.component.html
+++ b/src/app/component/admin-tickets/admin-tickets.component.html
@@ -1,5 +1,7 @@
 <div class="adminTickets">
   <div class="container p-5">
+    <h1>Les Tickets Acheter</h1>
+    <hr>
     <div class="list-group" *ngIf="this.tickets">
       <a
         *ngFor="let item of this.tickets"
