--- a/src/app/navbar/navbar/navbar.component.html
+++ b/src/app/navbar/navbar/navbar.component.html
@@ -17,6 +17,9 @@
       <li class="nav-item active">
         <a class="nav-link" [routerLink]="['']">Home</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" [routerLink]="['/movies']">Movies</a>
+      </li>
       <!-- Dropdown -->
       <li class="nav-item dropdown" *ngIf="this.loginService.isAdmin()">
         <a
